--- a/index.html
+++ b/index.html
@@ -5,17 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/icon.png">
     <title>Carousel</title>
 </head>
 <body>
 
-    <section>
+    <section id="app">
         <div class="slider">
 
             <!-- IMG -->
             <div class="slide-wrapper">
+
+
+
+
+
+
+                <div v-for="(el, i) in slides" :class="['slide-item', i === currentIndex ? 'active' : '']">
+                    <img :src="el.img" alt="el.title">
+                    <div class="slide-text">
+                        <h1>{{ el.title }}</h1>
+                        <h3>{{ el.description }}</h3>
+                    </div>
+                </div>
+
+
+
+
+
+
 
             </div>
 
@@ -28,6 +48,15 @@
 
                 <!-- PREVIEW -->
                 <div class="thumbnails">
+                    
+
+                    <div v-for="(el, i) in slides" :class="['thumb-item', i === currentIndex ? 'active' : '']">
+                        <img :src="el.img" alt="el.title">
+                    </div>
+
+
+
+
 
                 </div>
             </div>            
