--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="preview-wrapper">
                 <!-- FRECCE -->
                 <div class="arrows">
-                    <span @click="click_up" class="up"><i class="fas fa-angle-up"></i></span>
-                    <span @click="click_down" class="down"><i class="fas fa-angle-down"></i></span>
+                    <span @click="click_pre" class="up"><i class="fas fa-angle-up"></i></span>
+                    <span @click="click_next" class="down"><i class="fas fa-angle-down"></i></span>
                 </div>
 
                 <!-- PREVIEW -->
